# roadmap_python

./: LICENSE  README.md
basic_syntax/Atividades/cadastro_simples/: cadastro_simples.py
basic_syntax/Atividades/maior_idade/: maior_idade.py
data_structs_algorithms/: README.md
package_managers/pip_env/: README.md
package_managers/poetry/: README.md
package_managers/poetry/teste_inicial/: pyproject.toml
package_managers/poetry/teste_inicial/cadastro_tarefas/: tarefas.py
poo/: README.md
the_basics/basic_syntax/: README.md
the_basics/basic_syntax/Atividades/fatorial/: fatorial.py
the_basics/basic_syntax/Atividades/funcao_simples_com_poo/: README.md  funcao_simples.py
the_basics/basic_syntax/Atividades/funcao_simples_sem_poo/: funcao_simples.py
the_basics/basic_syntax/Atividades/lista_de_palavras/: lista_de_palavras.py
the_basics/dictionary/: README.md
the_basics/dictionary/Atividades/: adicoinar_chave_valor.py  alinhamento_dicionarios.py  modificar_valor.py  remove_chave_valor.py  simples.py
the_basics/exceptions/: README.md
the_basics/lists/: README.md
the_basics/lists/Atividades/: min_max.py  remove_repetidos.py  soma_pares.py
the_basics/lists_tuples_sets/: README.md
the_basics/lists_tuples_sets/Atividades/: conjuntos.py  listas.py  listas_tuplas.py  tuplas.py
the_basics/type_casting/: README.md
the_basics/variables_data_types/: README.md
variables_data_types/Atividades/conversao_tipos/: conversao_tipos.py
variables_data_types/Atividades/variaveis_simples/: variavel_simples.py
(+7 files in other folders)
