[tool.poetry]
name = "teste-inicial"
version = "0.1.0"
description = ""
authors = ["davieduardo001 <ed.miranda@tutanota.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
tarefas = "cadastro_tarefas.tarefas:cli"
